--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Agustin Marquez <agusdmb@gmail.com>"]
 python = "^3.10.6"
 fastapi = "^0.89.1"
 uvicorn = "^0.20.0"
+requests = "^2.28.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
@@ -25,6 +26,7 @@ pytest-repeat = "^0.9.1"
 pytest-xdist = "^3.1.0"
 pytest-cov = "^4.0.0"
 hypothesis = "^6.65.2"
+requests-mock = "^1.10.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
