--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pytest-xdist = "^3.1.0"
 pytest-cov = "^4.0.0"
 hypothesis = "^6.65.2"
 requests-mock = "^1.10.0"
+httpx = "^0.23.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
