--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ pytest-cov = "^4.0.0"
 hypothesis = "^6.65.2"
 requests-mock = "^1.10.0"
 httpx = "^0.23.3"
+mutmut = "^2.4.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
